Fixing css overflow scrolling

--- a/css/new.less
+++ b/css/new.less
@@ -675,7 +675,6 @@ h3 > a {
 
 div>div.panel-body.userlist {
     max-height: 500px;
-    overflow-y: scroll;
     margin-left: 3%;
     margin-right: 3%;
 }
